<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Hello World, BacktoPhysics!</string>
    <string name="app_name">Back to Physics</string>
    <string name="lblJuegoNuevo">Juego Nuevo</string>
    <string name="lblContinuar">Continuar</string>
    <string name="lblScores">High Scores</string>
    <string name="lblOpciones">Opciones</string>
    <string name="lblAcercaDe">Acerca De</string>
    <string name="lblTitulo">BACK TO PHYSICS</string>
    <string name="txtAcercaDe">
    \nBack to Physics
    \n
    \nAutores: 
    \n
    \n Verónica Fajardo A01163407
    \n Andrés Duran Kenny Espinoza A01162492 
    \n Gerardo Caballero Soto A01163487
    \n Luis Ivan Campos Soriano A01167949
    \n
    \n
    \nVersion: 1.0
    \n
    \nProyecto de solución de problemas con programación.
    \n
    \nCopyright 2011, ITESM
    </string>
    <string name="txtOpciones">OPCIONES</string>
    <string name="txtSonidos">Sonido</string>
    <string name="txtMusica">Musica</string>
    <string name="txtAcelerometro">Acelerometro</string>
    <string name="lblLoading">Cargando...</string>
    <string name="lblSabiasQue">¿Sabia que…?</string>
    <string name="cntSabiasQue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis placerat cursus ipsum vitae mollis. Pellentesque.</string>
    <string name="lblSonido"></string>
    <string name="lblMusica"></string>
    <string name="lblReglas">COMO JUGAR</string>
    <string name="lblInstruccionesVertical">Para jugar primero encuentra posición adecuada donde se sienta cómodo, después poner el dispositivo en un buen ángulo.</string>
    <string name="lblInstruccionesHorizontal">¡OH SI!  \n \n ¡También puedes jugar acostado!</string>
    <string name="lblCalibracion">Calibración</string>
    <string-array name="txtSabiasque">
        <item >La catapulta  fue creada alrededor del año 400 a.C en la ciudad griega Siracusa.</item>
        <item >En 885 Los Vikingos sitian la ciudad de Paris utilizando catapultas.</item>
        <item >En 1191 Más de 300 catapultas de tracción y torsión son usadas por Ricardo Corazón de León, en el sitio de Acre durante la Tercera Cruzada.</item>
        <item >El cañón fue el artefacto de artillería que desplazó a las catapultas en Europa.</item>
        <item >La primera catapulta medía aproximadamente 8 metros.</item>
        <item >En 399 aparece la primera catapulta con Dionysius I.</item>
        <item >Existían diferentes tipos de proyectiles para las catapultas como: rocas, bolas de piedra talladas, flechas de hierro, cestos de serpientes venenosas, ollas con gas asfixiante, nidos de avispas y estiércol de ganado.</item>
        <item >La catapulta también fue usada en la conquista de México y el hecho esta narrado en un pasaje del libro “La versión de los vencidos”.</item>
    </string-array>
        <string name="txtCalibracion">Calibración</string>
        <string name="txtModo">Modo de Juego</string>
</resources>
