<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
  <TextView android:layout_gravity="center" android:layout_marginBottom="12dp" android:layout_marginTop="12dp" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/lblReglas" android:typeface="sans" android:id="@+id/txtReglas"></TextView>
  <ImageView android:id="@+id/imageView1" android:layout_width="138dp" android:layout_height="151dp" android:src="@drawable/instruccionesvertical" />
  <TextView android:layout_gravity="left" android:layout_marginLeft="140dp" android:layout_marginBottom="-130dp" android:layout_marginTop="-130dp" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/lblInstruccionesVertical" android:typeface="sans" android:textSize="15dp" android:id="@+id/txtInstrucciones"></TextView>
  <ImageView android:id="@+id/imageView2" android:layout_width="138dp" android:layout_height="151dp" android:layout_gravity="left" android:layout_marginLeft="180dp" android:layout_marginTop="160dp" android:src="@drawable/instruccionesacostado" />
  <TextView android:layout_gravity="right" android:layout_marginRight="140dp" android:layout_marginBottom="-130dp" android:layout_marginTop="-110dp" android:id="@+id/txtInstrucciones" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblInstruccionesHorizontal" android:typeface="sans" android:textSize="15dp" android:textAppearance="?android:attr/textAppearanceLarge" />
  
</LinearLayout>